# nfl-predict

./: .gitignore  02_nfl_predict_class.ipynb  README.md  main.py  pyproject.toml  run.sh
confs/: modelling.yaml  modelling_averages.yaml  modelling_train_data.yaml  predict.yaml  scrape.yaml  training.yaml  training_random_forest.yaml  training_xgboost.yaml
data/: defense_downs.csv  defense_interceptions.csv  defense_passing.csv  defense_rushing.csv  defense_tackles.csv  nfl_data.parquet  offense_receiving.csv  special-teams_field-goals.csv  special-teams_kickoffs.csv  special-teams_punt-returns.csv
data/input/: defense_fumbles.csv  defense_receiving.csv  defense_scoring.csv  offense_downs.csv  offense_passing.csv  offense_rushing.csv  offense_scoring.csv  special-teams_kickoff-returns.csv  special-teams_scoring.csv
data/output/: featured_df.parquet  games_stats_nfl.parquet  test_data.parquet  train_data.parquet  treated_df.parquet  val_data.parquet
model/: README.md  model_nfl.pkl  xgb_model.pkg
nfl_predict/: get_data.py  get_data_main.py
nfl_predict/get_data/: get_data.py
notebooks/: 00_nfl_predict_class.ipynb  00_nfl_predict_class_loading_cleaning.ipynb  01_nfl_predict_class.ipynb  01_nfl_predict_class_eda.ipynb  02_nfl_predict_class.ipynb  02_nfl_predict_class_feature_engineering.ipynb  03_nfl_predict_class.ipynb  03_nfl_predict_class_modeling.ipynb  data_nfl.ipynb  data_validation.ipynb  model_development.ipynb  model_validation.ipynb  scraper.ipynb
raw/: game_schedule.csv
src/nfl_predict/: __main__.py  script.py  settings.py
src/nfl_predict/core/: modelling.py  predicting.py  training.py
src/nfl_predict/core/utils/: modelling_func.py
src/nfl_predict/io/: datasets.py  services.py
src/nfl_predict/jobs/: __init__.py  base.py  dataengineer.py  modelling.py  predicting.py  training.py
src/predict/: __init__.py  __main__.py  script.py
src/predict/io/: datasets.py
src/predict/jobs/: get_data_impl.py
src/predict/models/: get_data_params.py
src/predict/processors/: create_results_df_processor.py  get_data_impl.py  scrape_data_processor.py  turn_scrape_to_df_processor.py
src/predict/utils/: __init__.py  scrapers.py
