[tool.poetry]
name = "nfl_predict_project"
version = "0.2.2"
description = "Data Engineering project to predict NFL Stands."
authors = ["Rafael Bandoni <rafagbandoni@gmail.com>"]
readme = "README.md"
packages = [{include = "nfl_predict", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
beautifulsoup4 = "^4.12.3"
scipy = "^1.13.0"
pyarrow = "^16.0.0"
fastparquet = "^2024.2.0"
ipykernel = "^6.29.4"
pydantic = "^2.7.1"
omegaconf = "^2.3.0"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"

[tool.poetry.scripts]
nfl_predict = "nfl_predict.script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
