[project]
name = "nfl-predict"
version = "0.1.0"
description = "Project to predict NFL games outcome"
authors = [
    {name = "rafabandoni",email = "rafagbandoni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false